--- a/config.json
+++ b/config.json
@@ -5,9 +5,9 @@
 	"autoRead": true,
 	"self": false, 
 	"maxLimit": 30,
-	"ownerList": ["628xxxxxx@s.whatsapp.net", "6282xxxxxx@s.whatsapp.net"],
+	"ownerList": ["6281341772610@s.whatsapp.net", "6281341772610@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://api.zeks.me/logo.jpg",
-	"pack": "Sticker",
-	"author": "BOT"
+	"pack": "Mau Nyolong Ya!",
+	"author": "Neonddroid"
 }
