--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {	
 	"prefix": "multi", 
 	"defaultSessionName": "bot", 
-	"zeksKey": "81VaVs8zTLxowE52XtV9voW6qNr",
+	"zeksKey": "YAMETEKUDASAI",
 	"autoRead": true,
 	"self": false, 
 	"maxLimit": 30,
